src/gen/RRParser.cpp

// Generated from RR.g4 by ANTLR 4.12.0


#include "RRVisitor.h"

#include "RRParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct RRParserStaticData final {
  RRParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  RRParserStaticData(const RRParserStaticData&) = delete;
  RRParserStaticData(RRParserStaticData&&) = delete;
  RRParserStaticData& operator=(const RRParserStaticData&) = delete;
  RRParserStaticData& operator=(RRParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag rrParserOnceFlag;
RRParserStaticData *rrParserStaticData = nullptr;

void rrParserInitialize() {
  assert(rrParserStaticData == nullptr);
  auto staticData = std::make_unique<RRParserStaticData>(
    std::vector<std::string>{
      "prog", "block", "stmtlist", "stmt", "expr", "arglist", "func", "paramlist", 
      "literal"
    },
    std::vector<std::string>{
      "", "'{'", "'}'", "';'", "'<-'", "'if'", "'else'", "'while'", "'('", 
      "')'", "'*'", "'/'", "'+'", "'-'", "'=='", "'>'", "'<'", "'!'", "','", 
      "'fun'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "INTLIT", "ID", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  rrParserStaticData = staticData.release();
}

}

RRParser::RRParser(TokenStream *input) : RRParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

RRParser::RRParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  RRParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *rrParserStaticData->atn, rrParserStaticData->decisionToDFA, rrParserStaticData->sharedContextCache, options);
}

RRParser::~RRParser() {
  delete _interpreter;
}

const atn::ATN& RRParser::getATN() const {
  return *rrParserStaticData->atn;
}

std::string RRParser::getGrammarFileName() const {
  return "RR.g4";
}

const std::vector<std::string>& RRParser::getRuleNames() const {
  return rrParserStaticData->ruleNames;
}

const dfa::Vocabulary& RRParser::getVocabulary() const {
  return rrParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView RRParser::getSerializedATN() const {
  return rrParserStaticData->serializedATN;
}


//----------------- ProgContext ------------------------------------------------------------------

RRParser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

RRParser::StmtlistContext* RRParser::ProgContext::stmtlist() {
  return getRuleContext<RRParser::StmtlistContext>(0);
}

tree::TerminalNode* RRParser::ProgContext::EOF() {
  return getToken(RRParser::EOF, 0);
}


size_t RRParser::ProgContext::getRuleIndex() const {
  return RRParser::RuleProg;
}


std::any RRParser::ProgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RRVisitor*>(visitor))
    return parserVisitor->visitProg(this);
  else
    return visitor->visitChildren(this);
}

RRParser::ProgContext* RRParser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, RRParser::RuleProg);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(18);
    stmtlist();
    setState(19);
    match(RRParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

RRParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

RRParser::StmtlistContext* RRParser::BlockContext::stmtlist() {
  return getRuleContext<RRParser::StmtlistContext>(0);
}

RRParser::StmtContext* RRParser::BlockContext::stmt() {
  return getRuleContext<RRParser::StmtContext>(0);
}


size_t RRParser::BlockContext::getRuleIndex() const {
  return RRParser::RuleBlock;
}


std::any RRParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RRVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

RRParser::BlockContext* RRParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 2, RRParser::RuleBlock);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(26);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case RRParser::T__0: {
        enterOuterAlt(_localctx, 1);
        setState(21);
        match(RRParser::T__0);
        setState(22);
        stmtlist();
        setState(23);
        match(RRParser::T__1);
        break;
      }

      case RRParser::T__4:
      case RRParser::T__6:
      case RRParser::T__7:
      case RRParser::T__12:
      case RRParser::T__16:
      case RRParser::INTLIT:
      case RRParser::ID: {
        enterOuterAlt(_localctx, 2);
        setState(25);
        stmt();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtlistContext ------------------------------------------------------------------

RRParser::StmtlistContext::StmtlistContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

RRParser::StmtContext* RRParser::StmtlistContext::stmt() {
  return getRuleContext<RRParser::StmtContext>(0);
}

std::vector<RRParser::StmtlistContext *> RRParser::StmtlistContext::stmtlist() {
  return getRuleContexts<RRParser::StmtlistContext>();
}

RRParser::StmtlistContext* RRParser::StmtlistContext::stmtlist(size_t i) {
  return getRuleContext<RRParser::StmtlistContext>(i);
}


size_t RRParser::StmtlistContext::getRuleIndex() const {
  return RRParser::RuleStmtlist;
}


std::any RRParser::StmtlistContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RRVisitor*>(visitor))
    return parserVisitor->visitStmtlist(this);
  else
    return visitor->visitChildren(this);
}

RRParser::StmtlistContext* RRParser::stmtlist() {
  StmtlistContext *_localctx = _tracker.createInstance<StmtlistContext>(_ctx, getState());
  enterRule(_localctx, 4, RRParser::RuleStmtlist);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(28);
    stmt();
    setState(33);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(29);
        match(RRParser::T__2);
        setState(30);
        stmtlist(); 
      }
      setState(35);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    }
    setState(37);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      setState(36);
      match(RRParser::T__2);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtContext ------------------------------------------------------------------

RRParser::StmtContext::StmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t RRParser::StmtContext::getRuleIndex() const {
  return RRParser::RuleStmt;
}

void RRParser::StmtContext::copyFrom(StmtContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ExpressionContext ------------------------------------------------------------------

RRParser::ExprContext* RRParser::ExpressionContext::expr() {
  return getRuleContext<RRParser::ExprContext>(0);
}

RRParser::ExpressionContext::ExpressionContext(StmtContext *ctx) { copyFrom(ctx); }


std::any RRParser::ExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RRVisitor*>(visitor))
    return parserVisitor->visitExpression(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IfElseConditionContext ------------------------------------------------------------------

RRParser::ExprContext* RRParser::IfElseConditionContext::expr() {
  return getRuleContext<RRParser::ExprContext>(0);
}

std::vector<RRParser::BlockContext *> RRParser::IfElseConditionContext::block() {
  return getRuleContexts<RRParser::BlockContext>();
}

RRParser::BlockContext* RRParser::IfElseConditionContext::block(size_t i) {
  return getRuleContext<RRParser::BlockContext>(i);
}

RRParser::IfElseConditionContext::IfElseConditionContext(StmtContext *ctx) { copyFrom(ctx); }


std::any RRParser::IfElseConditionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RRVisitor*>(visitor))
    return parserVisitor->visitIfElseCondition(this);
  else
    return visitor->visitChildren(this);
}
//----------------- VariableAssignmentContext ------------------------------------------------------------------

tree::TerminalNode* RRParser::VariableAssignmentContext::ID() {
  return getToken(RRParser::ID, 0);
}

RRParser::ExprContext* RRParser::VariableAssignmentContext::expr() {
  return getRuleContext<RRParser::ExprContext>(0);
}

RRParser::VariableAssignmentContext::VariableAssignmentContext(StmtContext *ctx) { copyFrom(ctx); }


std::any RRParser::VariableAssignmentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RRVisitor*>(visitor))
    return parserVisitor->visitVariableAssignment(this);
  else
    return visitor->visitChildren(this);
}
//----------------- FunctionDefinitionContext ------------------------------------------------------------------

tree::TerminalNode* RRParser::FunctionDefinitionContext::ID() {
  return getToken(RRParser::ID, 0);
}

RRParser::FuncContext* RRParser::FunctionDefinitionContext::func() {
  return getRuleContext<RRParser::FuncContext>(0);
}

RRParser::FunctionDefinitionContext::FunctionDefinitionContext(StmtContext *ctx) { copyFrom(ctx); }


std::any RRParser::FunctionDefinitionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RRVisitor*>(visitor))
    return parserVisitor->visitFunctionDefinition(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IfConditionContext ------------------------------------------------------------------

RRParser::ExprContext* RRParser::IfConditionContext::expr() {
  return getRuleContext<RRParser::ExprContext>(0);
}

RRParser::BlockContext* RRParser::IfConditionContext::block() {
  return getRuleContext<RRParser::BlockContext>(0);
}

RRParser::IfConditionContext::IfConditionContext(StmtContext *ctx) { copyFrom(ctx); }


std::any RRParser::IfConditionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RRVisitor*>(visitor))
    return parserVisitor->visitIfCondition(this);
  else
    return visitor->visitChildren(this);
}
//----------------- WhileLoopContext ------------------------------------------------------------------

RRParser::ExprContext* RRParser::WhileLoopContext::expr() {
  return getRuleContext<RRParser::ExprContext>(0);
}

RRParser::BlockContext* RRParser::WhileLoopContext::block() {
  return getRuleContext<RRParser::BlockContext>(0);
}

RRParser::WhileLoopContext::WhileLoopContext(StmtContext *ctx) { copyFrom(ctx); }


std::any RRParser::WhileLoopContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RRVisitor*>(visitor))
    return parserVisitor->visitWhileLoop(this);
  else
    return visitor->visitChildren(this);
}
RRParser::StmtContext* RRParser::stmt() {
  StmtContext *_localctx = _tracker.createInstance<StmtContext>(_ctx, getState());
  enterRule(_localctx, 6, RRParser::RuleStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(60);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<RRParser::VariableAssignmentContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(39);
      match(RRParser::ID);
      setState(40);
      match(RRParser::T__3);
      setState(41);
      expr(0);
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<RRParser::FunctionDefinitionContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(42);
      match(RRParser::ID);
      setState(43);
      match(RRParser::T__3);
      setState(44);
      func();
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<RRParser::IfConditionContext>(_localctx);
      enterOuterAlt(_localctx, 3);
      setState(45);
      match(RRParser::T__4);
      setState(46);
      antlrcpp::downCast<IfConditionContext *>(_localctx)->cond = expr(0);
      setState(47);
      antlrcpp::downCast<IfConditionContext *>(_localctx)->body = block();
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<RRParser::IfElseConditionContext>(_localctx);
      enterOuterAlt(_localctx, 4);
      setState(49);
      match(RRParser::T__4);
      setState(50);
      antlrcpp::downCast<IfElseConditionContext *>(_localctx)->cond = expr(0);
      setState(51);
      antlrcpp::downCast<IfElseConditionContext *>(_localctx)->truebody = block();
      setState(52);
      match(RRParser::T__5);
      setState(53);
      antlrcpp::downCast<IfElseConditionContext *>(_localctx)->falsebody = block();
      break;
    }

    case 5: {
      _localctx = _tracker.createInstance<RRParser::WhileLoopContext>(_localctx);
      enterOuterAlt(_localctx, 5);
      setState(55);
      match(RRParser::T__6);
      setState(56);
      antlrcpp::downCast<WhileLoopContext *>(_localctx)->cond = expr(0);
      setState(57);
      antlrcpp::downCast<WhileLoopContext *>(_localctx)->body = block();
      break;
    }

    case 6: {
      _localctx = _tracker.createInstance<RRParser::ExpressionContext>(_localctx);
      enterOuterAlt(_localctx, 6);
      setState(59);
      expr(0);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

RRParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t RRParser::ExprContext::getRuleIndex() const {
  return RRParser::RuleExpr;
}

void RRParser::ExprContext::copyFrom(ExprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- OpUnaryContext ------------------------------------------------------------------

RRParser::ExprContext* RRParser::OpUnaryContext::expr() {
  return getRuleContext<RRParser::ExprContext>(0);
}

RRParser::OpUnaryContext::OpUnaryContext(ExprContext *ctx) { copyFrom(ctx); }


std::any RRParser::OpUnaryContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RRVisitor*>(visitor))
    return parserVisitor->visitOpUnary(this);
  else
    return visitor->visitChildren(this);
}
//----------------- VariableReadContext ------------------------------------------------------------------

tree::TerminalNode* RRParser::VariableReadContext::ID() {
  return getToken(RRParser::ID, 0);
}

RRParser::VariableReadContext::VariableReadContext(ExprContext *ctx) { copyFrom(ctx); }


std::any RRParser::VariableReadContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RRVisitor*>(visitor))
    return parserVisitor->visitVariableRead(this);
  else
    return visitor->visitChildren(this);
}
//----------------- LitContext ------------------------------------------------------------------

RRParser::LiteralContext* RRParser::LitContext::literal() {
  return getRuleContext<RRParser::LiteralContext>(0);
}

RRParser::LitContext::LitContext(ExprContext *ctx) { copyFrom(ctx); }


std::any RRParser::LitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RRVisitor*>(visitor))
    return parserVisitor->visitLit(this);
  else
    return visitor->visitChildren(this);
}
//----------------- OpComparsionContext ------------------------------------------------------------------

std::vector<RRParser::ExprContext *> RRParser::OpComparsionContext::expr() {
  return getRuleContexts<RRParser::ExprContext>();
}

RRParser::ExprContext* RRParser::OpComparsionContext::expr(size_t i) {
  return getRuleContext<RRParser::ExprContext>(i);
}

RRParser::OpComparsionContext::OpComparsionContext(ExprContext *ctx) { copyFrom(ctx); }


std::any RRParser::OpComparsionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RRVisitor*>(visitor))
    return parserVisitor->visitOpComparsion(this);
  else
    return visitor->visitChildren(this);
}
//----------------- FunctionCallContext ------------------------------------------------------------------

tree::TerminalNode* RRParser::FunctionCallContext::ID() {
  return getToken(RRParser::ID, 0);
}

RRParser::ArglistContext* RRParser::FunctionCallContext::arglist() {
  return getRuleContext<RRParser::ArglistContext>(0);
}

RRParser::FunctionCallContext::FunctionCallContext(ExprContext *ctx) { copyFrom(ctx); }


std::any RRParser::FunctionCallContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RRVisitor*>(visitor))
    return parserVisitor->visitFunctionCall(this);
  else
    return visitor->visitChildren(this);
}
//----------------- OpParensContext ------------------------------------------------------------------

RRParser::ExprContext* RRParser::OpParensContext::expr() {
  return getRuleContext<RRParser::ExprContext>(0);
}

RRParser::OpParensContext::OpParensContext(ExprContext *ctx) { copyFrom(ctx); }


std::any RRParser::OpParensContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RRVisitor*>(visitor))
    return parserVisitor->visitOpParens(this);
  else
    return visitor->visitChildren(this);
}
//----------------- OpComputationContext ------------------------------------------------------------------

std::vector<RRParser::ExprContext *> RRParser::OpComputationContext::expr() {
  return getRuleContexts<RRParser::ExprContext>();
}

RRParser::ExprContext* RRParser::OpComputationContext::expr(size_t i) {
  return getRuleContext<RRParser::ExprContext>(i);
}

RRParser::OpComputationContext::OpComputationContext(ExprContext *ctx) { copyFrom(ctx); }


std::any RRParser::OpComputationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RRVisitor*>(visitor))
    return parserVisitor->visitOpComputation(this);
  else
    return visitor->visitChildren(this);
}

RRParser::ExprContext* RRParser::expr() {
   return expr(0);
}

RRParser::ExprContext* RRParser::expr(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  RRParser::ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, parentState);
  RRParser::ExprContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 8;
  enterRecursionRule(_localctx, 8, RRParser::RuleExpr, precedence);

    size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(77);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<LitContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;

      setState(63);
      literal();
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<VariableReadContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(64);
      match(RRParser::ID);
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<FunctionCallContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(65);
      antlrcpp::downCast<FunctionCallContext *>(_localctx)->fun = match(RRParser::ID);
      setState(66);
      match(RRParser::T__7);
      setState(68);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 3285248) != 0)) {
        setState(67);
        antlrcpp::downCast<FunctionCallContext *>(_localctx)->args = arglist();
      }
      setState(70);
      match(RRParser::T__8);
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<OpUnaryContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(71);
      antlrcpp::downCast<OpUnaryContext *>(_localctx)->op = _input->LT(1);
      _la = _input->LA(1);
      if (!(_la == RRParser::T__12

      || _la == RRParser::T__16)) {
        antlrcpp::downCast<OpUnaryContext *>(_localctx)->op = _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(72);
      antlrcpp::downCast<OpUnaryContext *>(_localctx)->e = expr(2);
      break;
    }

    case 5: {
      _localctx = _tracker.createInstance<OpParensContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(73);
      match(RRParser::T__7);
      setState(74);
      antlrcpp::downCast<OpParensContext *>(_localctx)->e = expr(0);
      setState(75);
      match(RRParser::T__8);
      break;
    }

    default:
      break;
    }
    _ctx->stop = _input->LT(-1);
    setState(90);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(88);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
        case 1: {
          auto newContext = _tracker.createInstance<OpComputationContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          newContext->left = previousContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(79);

          if (!(precpred(_ctx, 5))) throw FailedPredicateException(this, "precpred(_ctx, 5)");
          setState(80);
          antlrcpp::downCast<OpComputationContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!(_la == RRParser::T__9

          || _la == RRParser::T__10)) {
            antlrcpp::downCast<OpComputationContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(81);
          antlrcpp::downCast<OpComputationContext *>(_localctx)->right = expr(6);
          break;
        }

        case 2: {
          auto newContext = _tracker.createInstance<OpComputationContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          newContext->left = previousContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(82);

          if (!(precpred(_ctx, 4))) throw FailedPredicateException(this, "precpred(_ctx, 4)");
          setState(83);
          antlrcpp::downCast<OpComputationContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!(_la == RRParser::T__11

          || _la == RRParser::T__12)) {
            antlrcpp::downCast<OpComputationContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(84);
          antlrcpp::downCast<OpComputationContext *>(_localctx)->right = expr(5);
          break;
        }

        case 3: {
          auto newContext = _tracker.createInstance<OpComparsionContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          newContext->left = previousContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(85);

          if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
          setState(86);
          antlrcpp::downCast<OpComparsionContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!((((_la & ~ 0x3fULL) == 0) &&
            ((1ULL << _la) & 114688) != 0))) {
            antlrcpp::downCast<OpComparsionContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(87);
          antlrcpp::downCast<OpComparsionContext *>(_localctx)->right = expr(4);
          break;
        }

        default:
          break;
        } 
      }
      setState(92);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- ArglistContext ------------------------------------------------------------------

RRParser::ArglistContext::ArglistContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

RRParser::ExprContext* RRParser::ArglistContext::expr() {
  return getRuleContext<RRParser::ExprContext>(0);
}

std::vector<RRParser::ArglistContext *> RRParser::ArglistContext::arglist() {
  return getRuleContexts<RRParser::ArglistContext>();
}

RRParser::ArglistContext* RRParser::ArglistContext::arglist(size_t i) {
  return getRuleContext<RRParser::ArglistContext>(i);
}


size_t RRParser::ArglistContext::getRuleIndex() const {
  return RRParser::RuleArglist;
}


std::any RRParser::ArglistContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RRVisitor*>(visitor))
    return parserVisitor->visitArglist(this);
  else
    return visitor->visitChildren(this);
}

RRParser::ArglistContext* RRParser::arglist() {
  ArglistContext *_localctx = _tracker.createInstance<ArglistContext>(_ctx, getState());
  enterRule(_localctx, 10, RRParser::RuleArglist);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(93);
    expr(0);
    setState(98);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(94);
        match(RRParser::T__17);
        setState(95);
        arglist(); 
      }
      setState(100);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncContext ------------------------------------------------------------------

RRParser::FuncContext::FuncContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

RRParser::BlockContext* RRParser::FuncContext::block() {
  return getRuleContext<RRParser::BlockContext>(0);
}

RRParser::ParamlistContext* RRParser::FuncContext::paramlist() {
  return getRuleContext<RRParser::ParamlistContext>(0);
}


size_t RRParser::FuncContext::getRuleIndex() const {
  return RRParser::RuleFunc;
}


std::any RRParser::FuncContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RRVisitor*>(visitor))
    return parserVisitor->visitFunc(this);
  else
    return visitor->visitChildren(this);
}

RRParser::FuncContext* RRParser::func() {
  FuncContext *_localctx = _tracker.createInstance<FuncContext>(_ctx, getState());
  enterRule(_localctx, 12, RRParser::RuleFunc);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(101);
    match(RRParser::T__18);
    setState(102);
    match(RRParser::T__7);
    setState(104);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == RRParser::ID) {
      setState(103);
      antlrcpp::downCast<FuncContext *>(_localctx)->params = paramlist();
    }
    setState(106);
    match(RRParser::T__8);
    setState(107);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamlistContext ------------------------------------------------------------------

RRParser::ParamlistContext::ParamlistContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}
